kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-lab
  labels:
    environment: lab
    project: kubernetes-production-lab
