kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: devops-lab
spec:
  type: ClusterIP

  selector:
    app: nginx-demo

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
